--- a/styles/principal.css
+++ b/styles/principal.css
@@ -4,6 +4,7 @@
   scroll-behavior: smooth; 
   background-attachment: fixed;
 }
+
 body {
   background-color: #270000;
   color: #dfc7c7;
@@ -11,8 +12,9 @@ body {
   line-height: 1.75;
   padding: 20px;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
 }
+
 header {
   text-align: center;
   padding: 30px 30px;
@@ -65,6 +67,18 @@ nav a:hover {
   color: #e19b9b;
 }
 
+@media (max-width: 768px) {
+  nav {
+    position: static;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  nav a {
+    padding: 10px;
+  }
+}
 
 
 section{
@@ -72,7 +86,12 @@ section{
   padding: 20px 20px;
   background-color: rgba(70, 10, 10, 0.9);
   border-radius: 5px;
-  margin: 150px;
+  margin: 40px 10px;
+}
+@media (min-width: 1024px) {
+  section {
+    margin: 150px;
+  }
 }
 
 #about {
@@ -177,12 +196,6 @@ section{
   color: #e19b9b;
 }
 
-.project video {
-  display: block;
-  max-width: 400px;
-  height: auto;
-}
-
 .project-content {
   flex: 1;
 }
@@ -196,9 +209,25 @@ section{
 }
 
 .project video {
-    width: 400px;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0,0,0,1);
+  display: block;
+  max-width: 400px;
+  height: auto;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,1);
+}
+
+
+@media (max-width: 1024px) {
+  .project video {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 768px) {
+  .project video {
+    max-width: 50%;
+  }
 }
 
 #contact {
@@ -412,4 +441,14 @@ footer p{
   z-index: 100;
 }
 
+@media (max-width: 768px) {
+  .theme-buttons {
+    bottom: 10px;
+    left: 10px;
+  }
 
+  #scroll-top {
+    right: 10px;
+    bottom: 10px;
+  }
+}
